--- a/frontend/src/Styles/navBar.css
+++ b/frontend/src/Styles/navBar.css
@@ -1,9 +1,43 @@
-.navBar{
+.navBar {
   position: fixed;
   top: 0;
   left: 210px;
   right: 0;
-  width: calc(100%-210px);
-  height: 9vh;
+  display: flex;
+  justify-content: space-between;
   background-color: grey;
+  height: 9vh;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+}
+
+.navItem{
+  margin: 0 1rem 0 1rem;
+}
+
+.navLeft, .navRight {
+  display: flex;
+  align-items: center;
+}
+
+.navLink {
+  padding: 1rem;
+  border-radius: 0.5rem;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: white;
+  font-weight:bold;
+}
+
+.navLink:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+
+.logo {
+  font-size: 20px;
+  font-weight: bold;
+  color:#109eff;
 }
