--- a/frontend/src/Styles/navBar.css
+++ b/frontend/src/Styles/navBar.css
@@ -23,13 +23,14 @@
 }
 
 .navLink {
-  padding: 1rem;
+  padding: 0.7rem;
   border-radius: 0.5rem;
   display: flex;
   align-items: center;
   text-decoration: none;
   color: white;
   font-weight:bold;
+  transition: background-color 0.4s ease;
 }
 
 .navLink:hover {
