--- a/frontend/src/Styles/sideBar.css
+++ b/frontend/src/Styles/sideBar.css
@@ -12,7 +12,7 @@
 }
 
 .sideBar.closed {
-  width: 47px;
+  width: 59px;
   overflow: hidden;
 }
 
@@ -31,7 +31,7 @@
 }
 
 .nav-item:hover {
-  background-color: #57606f;
+  /* background-color: #57606f; */
   color: #ffffff;
   cursor: pointer;
 }
@@ -49,7 +49,10 @@
   font-size: 0.9rem;
   padding: 0.3rem;
   border-radius: 4px;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.3s ease,color 0.3s ease;
+}
+.nav-link:hover{
+  color:blue;
 }
 
 .close-btn {
@@ -62,8 +65,16 @@
 #close-button{
   background-color: #57606f;
   border: none;
-  border-radius: 0.3rem;
-  padding: 0.8rem;
+  border-radius: 0.4rem;
+  padding: 0.3rem;
   margin: 0.5rem;
   cursor: pointer;
+}
+#hom{
+  margin-right: 0.3rem;
+}
+#close-button.close-btn-nav{
+  position: fixed;
+  top: 1.1rem;
+  margin-top: 0;
 }
