--- a/frontend/src/Styles/modelBox.css
+++ b/frontend/src/Styles/modelBox.css
@@ -44,3 +44,11 @@
 .model-button.secondary:hover {
   background-color: #4e5357;
 }
+
+.engagement-section{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 4rem;
+}
