--- a/frontend/src/Styles/modelEach.css
+++ b/frontend/src/Styles/modelEach.css
@@ -14,11 +14,11 @@
   font-size: 1rem;
   padding: 1rem;
 }
-.allPages h1 {
+/* .allPages h1 {
   font-size: 2rem;
   margin-bottom: 1.5rem;
   color: #007bff;
-}
+} */
 
 .button-group {
   margin: 1rem 0;
