--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,5 +5,8 @@
     bottom: 0;
     top: 9vh;
     right: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
     overflow-y: auto;
 }
