--- a/frontend/src/Styles/explore.css
+++ b/frontend/src/Styles/explore.css
@@ -14,7 +14,7 @@
   justify-content: space-between;
   padding: 2rem 4rem;
   font-family: 'Inter', sans-serif;
-  height: 65vh;
+  /* height: 70vh; */
   /* box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05); */
   /* background: linear-gradient(135deg, #e0f7ff, #ffffff); */
   /* border: 1px solid black; */
