--- a/frontend/src/Styles/community.css
+++ b/frontend/src/Styles/community.css
@@ -1,23 +1,25 @@
-.community-wrapper {
-  padding: 2rem;
-  background-color: #f9f9f9;
-  min-height: 91vh;
+#community-wrapper {
+  padding: 3rem;
+  /* background-color: #f9f9f9; */
   display: flex;
+  gap: 0.3rem;
   flex-direction: column;
-  gap: 1.5rem;
 }
 
 .post-card {
   background: #fff;
   border-radius: 12px;
-  padding: 1.5rem;
-  box-shadow: 0 4px 14px rgba(0, 0, 0, 0.05);
+  padding: 1rem;
+  margin-bottom: 0;
+  cursor: pointer;
+  height:auto;
+  /* box-shadow: 0 4px 14px rgba(0, 0, 0, 0.05); */
   transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
 .post-card:hover {
-  transform: translateY(-4px);
-  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+  transform: translateY(-2px);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .post-header {
@@ -39,16 +41,20 @@
   display: flex;
   flex-direction: column;
   font-size: 0.9rem;
+  justify-content: center;
+  gap: 0.5rem;
 }
 
 .username {
   font-weight: bold;
+  margin: 0;
   color: #333;
 }
 
 .time {
   color: #777;
   font-size: 0.8rem;
+  margin: 0;
 }
 
 .post-title {
@@ -73,4 +79,17 @@
   gap: 1.5rem;
   font-size: 0.9rem;
   color: #555;
+}
+.post-footer span{
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  cursor: pointer;
+}
+hr {
+  border: none;
+  border-top: 1px solid black;
+  width: 100%;
+  margin: 0;
+  align-self: center;
 }
