--- a/frontend/src/Styles/signUp.css
+++ b/frontend/src/Styles/signUp.css
@@ -1,31 +1,29 @@
-body{
-    margin: 0;
-}
-.signup-wrapper {
+.auth-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   background: linear-gradient(135deg, #e3f2fd, #90caf9);
   animation: fadeIn 1s ease-in-out;
+  min-height: 100vh;
 }
 
-.signup-form {
+.auth-form {
   background: white;
-  padding: 30px 40px;
-  border-radius: 16px;
+  margin: 5rem;
+  padding: 3rem 4rem;
+  border-radius: 2rem;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
   width: 100%;
-  max-width: 400px;
+  max-width: 34rem;
   animation: slideUp 0.8s ease-in-out;
   transition: transform 0.3s ease;
 }
 
-.signup-form:hover {
+.auth-form:hover {
   transform: translateY(-4px);
 }
 
-.form-title {
+.auth-form-title {
   text-align: center;
   margin-bottom: 20px;
   color: #1976d2;
@@ -33,30 +31,31 @@ body{
   font-weight: bold;
 }
 
-.signup-form label {
+.auth-form label {
   font-weight: 600;
+  font-size: 1.2rem;
   margin-top: 12px;
   display: block;
   color: #333;
 }
 
-.signup-form input,
-.signup-form select {
+.auth-form input{
   width: 100%;
-  padding: 10px 12px;
+  padding: 0.6rem 0.8rem;
+  font-size: 1.2rem;
   border: 1px solid #ccc;
   border-radius: 6px;
   margin-top: 6px;
   transition: border 0.3s ease;
+  box-sizing:border-box;
 }
 
-.signup-form input:focus,
-.signup-form select:focus {
+.auth-form input:focus{
   border-color: #1976d2;
   outline: none;
 }
 
-.submit-btn {
+.auth-submit-btn {
   margin-top: 20px;
   width: 100%;
   padding: 12px;
@@ -69,31 +68,44 @@ body{
   transition: background-color 0.3s ease;
   cursor: pointer;
 }
+.auth-submit-btn:hover {
+  background-color: #0d47a1;
+}
+
+.signup-div{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  margin: 0 0 1rem 0;
+}
+
 .optSec{
-  margin-top: 20px;
   width: 30%;
-  padding: 0.5rem;
+  padding: 0.7rem;
   background-color: #1976d2;
   color: white;
   border: none;
   border-radius: 6px;
   font-weight: bold;
-  font-size: 12px;
+  font-size: 1.1rem;
   transition: background-color 0.3s ease;
   cursor: pointer;
 }
-.submit-btn:hover {
-  background-color: #0d47a1;
-}
+
 .optSec:hover{
   background-color: #0d47a1;
 }
-.image-preview {
+
+
+
+.upload-img-preview {
   margin-top: 16px;
   text-align: center;
 }
 
-.image-preview img {
+.upload-img-preview img {
   width: 90px;
   height: 90px;
   object-fit: cover;
@@ -130,4 +142,35 @@ body{
     transform: translateY(0);
     opacity: 1;
   }
+}
+
+.auth-footer-link {
+  text-align: center;
+  margin-top: 2rem;
+  font-size: 1.5rem;
+}
+.auth-footer-link a {
+  color: #1976d2;
+  text-decoration: none;
+  font-weight: bold;
+}
+.auth-footer-link a:hover {
+  text-decoration: underline;
+}
+
+.auth-guest-btn {
+  background-color: transparent;
+  border: 1px solid #1976d2;
+  color: #1976d2;
+  padding: 0.8rem 1rem;
+  border-radius: 1rem;
+  font-size: 1.2rem;
+  font-weight: 500;
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+}
+
+.auth-guest-btn:hover {
+  background-color: #1976d2;
+  color: white;
 }
