Added theme toggler, logo, small stylings

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,13 +1,13 @@
 .allPages{
-    padding: 0;
-    position: fixed;
-    left:59px;
-    bottom: 0;
-    top: 9vh;
-    right: 0;
-    display: flex;
-    flex-direction: column;
-    overflow-y: auto;
+  padding: 0;
+  position: fixed;
+  left:59px;
+  bottom: 0;
+  top: 9vh;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
 }
 /* App.css */
 
@@ -22,6 +22,7 @@ html, body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  background: var(--bg-primary);
 }
 
 .main-content {
@@ -30,4 +31,56 @@ html, body {
   overflow-y: auto;
 }
 
+/* Theme styling */
+:root {
+  /* Core Colors */
+  --primary-blue: #3a6df0;
+  --secondary-blue: #6e8efb;
 
+  /* Dark theme raw colors (unchanged) */
+  --bg-primary-dark: linear-gradient(to bottom, #000000 0%, #1092f6 100%);
+  --bg-secondary-dark:  linear-gradient(-45deg, #E0F0FF 0%, #C0DCFF 100%); 
+
+  --bg-hover-dark:rgba(255, 255, 255, 0.25);
+
+  --text-primary-dark: #ffffff;
+  --text-secondary-dark: #b0b0ff;
+
+  /*  Updated Light Theme Colors */
+  --bg-primary-light: linear-gradient(to bottom, #ffffff 0%, #cfeaff 100%);
+  --bg-secondary-light: linear-gradient(-45deg, #E0F0FF 0%, #C0DCFF 100%);     /* sections/cards */
+
+  --bg-hover-light:rgba(58, 109, 240, 0.15); /* for icon button hovers */
+
+  --text-primary-light: #000000;                /* True black for main text */
+  --text-secondary-light: #1e4ecc;              /* Blue for links/subtext/icons */
+}
+
+.light-theme {
+  --text-primary: var(--text-primary-light);
+  --text-secondary: var(--text-secondary-light);
+  --bg-primary: var(--bg-primary-light);
+  --bg-secondary: var(--bg-secondary-light);
+  --bg-navbar: var(--bg-navbar-light);
+  --bg-hover:var(--bg-hover-light);
+}
+
+.dark-theme {
+  --text-primary: var(--text-primary-dark);
+  --text-secondary: var(--text-secondary-dark);
+  --bg-primary: var(--bg-primary-dark);
+  --bg-secondary: var(--bg-secondary-dark);
+  --bg-navbar: var(--bg-navbar-dark);
+  --bg-hover:var(--bg-hover-dark);
+}
+
+@media (max-width:650px) {
+  .sideBar.closed {
+    width: 0px;
+    overflow: hidden;
+    display: none;
+  }
+  .allPages{
+    left: 0px;
+  }
+}
