--- a/frontend/src/Styles/sideBar.css
+++ b/frontend/src/Styles/sideBar.css
@@ -4,9 +4,14 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-color: #2f3542;
-  background-color: grey;
-  transition: width 0.3s ease;
+
+  /*Glassy effect background:*/
+  background: rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+
+  box-shadow: 2px 0 8px rgba(0, 0, 0, 0.05); 
+  transition: width 0.5s ease;
   z-index: 1000;
   overflow-y: auto;
 }
@@ -23,58 +28,41 @@
 .inside {
   display: flex;
   flex-direction: column;
-  padding-top: 1rem;
-}
-
-.nav-item {
-  padding: 1rem 1rem;
-}
-
-.nav-item:hover {
-  /* background-color: #57606f; */
-  color: #ffffff;
-  cursor: pointer;
-}
-.nav-link.active {
-  background-color:#57606f ;
-  border-radius: 5px;
 }
 
 .nav-link {
   display: flex;
   align-items: center;
   gap: 10px;
-  color: #f1f2f6;
+  color: var(--text-primary);
   text-decoration: none;
-  font-size: 0.9rem;
-  padding: 0.3rem;
+  font-size: 1.2rem;
+  padding: 1.3rem 1.3rem;
   border-radius: 4px;
-  transition: background-color 0.3s ease,color 0.3s ease;
+  transition: all 0.3s ease;
+  height: 100%;
 }
-.nav-link:hover{
-  color:blue;
+.nav-link:hover {
+  background: var(--bg-hover); /* subtle light blue background */
+  color: var(--primary-blue);
 }
 
 .close-btn {
   display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  height: 4rem;
+  justify-content:flex-end;
+  align-items: start;
+  min-height: 4rem;
+  padding-top: 1rem;
 }
 
 #close-button{
-  background-color: #57606f;
+  background-color: transparent;
   border: none;
-  border-radius: 0.4rem;
-  padding: 0.3rem;
-  margin: 0.5rem;
+  border-radius: 1rem;
+  padding: 1rem 1.5rem;
   cursor: pointer;
 }
-#hom{
-  margin-right: 0.3rem;
-}
-#close-button.close-btn-nav{
-  position: fixed;
-  top: 1.1rem;
-  margin-top: 0;
+
+#close-button:hover{
+  background-color: var(--bg-hover);
 }
