--- a/frontend/src/Styles/categories.css
+++ b/frontend/src/Styles/categories.css
@@ -1,6 +1,11 @@
 .row{
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  gap: 2rem;
+  gap: 1rem;
   padding: 1rem;
+}
+.cathead{
+  font-family: var(--font-heading);
+  margin-left: 2rem;
+  color: var(--text-primary);
 }
