--- a/frontend/src/Styles/categoryBox.css
+++ b/frontend/src/Styles/categoryBox.css
@@ -1,12 +1,27 @@
 .categoryBox{
-  border: 1px solid #ccc;
   border-radius: 10px;
-  padding: 16px;
-  background-color: #fff;
+  padding: 10px;
+  /* background-color: #fff; */
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
   transition: transform 0.2s;
   cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: var(--bg-secondary);
+
 }
 .categoryBox:hover{
     transform: scale(1.03);
+}
+#catImg{
+  width:200px;
+  border-radius:10px;
+  text-align: center;
+}
+.catlabel{
+  font-family: var(--font-subheading);
+}
+.catDes{
+  font-family: var(--font-body);
 }
