--- a/frontend/src/Styles/navBar.css
+++ b/frontend/src/Styles/navBar.css
@@ -32,8 +32,9 @@
   align-items: center;
   text-decoration: none;
   color: var(--text-primary);
-  font-weight:bold;
-  font-size: 1.3rem;
+  font-family: var(--font-heading);
+  font-size:large;
+  font-weight:600;
   transition: background-color 0.4s ease;
   cursor: pointer;
 }
